--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,28 @@
 spring:
- jpa:
-   database-platform: org.hibernate.dialect.H2Dialect
-   show-sql: true
-   hibernate:
-     ddl-auto: create-drop
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+       ddl-auto: update
+       jdbc:
+         lob:
+           non_contextual_creation: true
+         database-platform: org.hibernate.dialect.PostgreSQL9Dialect
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: root
 
- thymeleaf:
-   enabled: true
-   encoding: UTF-8
-   cache: false
-   check-template: true
-   check-template-location: true
-   mode: HTML
+  thymeleaf:
+    enabled: true
+    encoding: UTF-8
+    cache: false
+    check-template: true
+    check-template-location: true
+    mode: HTML
+    template-resolver-order: 0
 
-   template-resolver-order: 0
 
- h2:
-   console:
-     enabled: true
 
 server:
   port: 8081
