--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<lombock.version>1.16.20</lombock.version>
+		<java.version>11</java.version> <!-- nerd -->
 		<guava.version>26.0-jre</guava.version>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version> <!-- nerd -->
 		<devtools.version>2.0.4.RELEASE</devtools.version>
 		<thymelaf.layout.version>2.3.0</thymelaf.layout.version>
 	</properties>
@@ -66,7 +65,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>${lombock.version}</version>
+			<version>1.18.16</version>
 		</dependency>
 
 		<dependency>
